<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gz-gui8</name>
  <version>8.4.0</version>
  <description>Gazebo GUI : Graphical interfaces for robotics applications</description>
  <maintainer email="jennuine@google.com">Jenn Nguyen</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/gazebosim/gz-rendering</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>gz-cmake3</build_depend>

  <depend>gz-common5</depend>
  <depend>gz-math7</depend>
  <depend>gz-msgs10</depend>
  <depend>gz-plugin2</depend>
  <depend>gz-rendering8</depend>
  <depend>gz-tools2</depend>
  <depend>gz-transport13</depend>
  <depend>gz-utils2</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-qml</depend>
  <depend>libqt5-quick</depend>
  <depend>libqt5-widgets</depend>
  <depend>protobuf-dev</depend>
  <depend>qml-module-qt-labs-folderlistmodel</depend>
  <depend>qml-module-qt-labs-platform</depend>
  <depend>qml-module-qt-labs-settings</depend>
  <depend>qml-module-qtcharts</depend>
  <depend>qml-module-qtgraphicaleffects</depend>
  <depend>qml-module-qtlocation</depend>
  <depend>qml-module-qtpositioning</depend>
  <depend>qml-module-qtquick-controls2</depend>
  <depend>qml-module-qtquick-controls</depend>
  <depend>qml-module-qtquick-dialogs</depend>
  <depend>qml-module-qtquick-extras</depend>
  <depend>qml-module-qtquick-layouts</depend>
  <depend>qml-module-qtquick-templates2</depend>
  <depend>qml-module-qtquick-window2</depend>
  <depend>qml-module-qtquick2</depend>
  <depend>qtbase5-dev</depend>
  <depend>qtdeclarative5-dev</depend>
  <depend>qtquickcontrols2-5-dev</depend>
  <depend>tinyxml2</depend>

  <test_depend>xvfb</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
