<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gz-gui</name>
  <version>10.0.0</version>
  <description>Gazebo GUI : Graphical interfaces for robotics applications</description>
  <maintainer email="jennuine@google.com">Jenn Nguyen</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/gazebosim/gz-rendering</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>gz-cmake</build_depend>

  <depend>gz-common</depend>
  <depend>gz-math</depend>
  <depend>gz-msgs</depend>
  <depend>gz-plugin</depend>
  <depend>gz-rendering</depend>
  <depend>gz-tools2</depend>
  <depend>gz-transport</depend>
  <depend>gz-utils</depend>
  <depend>libqt6svg6</depend>
  <depend>protobuf-dev</depend>
  <depend>qml6-module-qt-labs-folderlistmodel</depend>
  <depend>qml6-module-qt-labs-platform</depend>
  <depend>qml6-module-qt-labs-settings</depend>
  <depend>qml6-module-qtcharts</depend>
  <depend>qml6-module-qtpositioning</depend>
  <depend>qml6-module-qtqml-models</depend>
  <depend>qml6-module-qtquick-controls</depend>
  <depend>qml6-module-qtquick-dialogs</depend>
  <depend>qml6-module-qtquick-layouts</depend>
  <depend>qml6-module-qtquick-templates</depend>
  <depend>qml6-module-qtquick-window</depend>
  <depend>qml6-module-qtquick</depend>
  <depend>qml6-module-qtqml</depend>
  <depend>qml6-module-qtcore</depend>
  <depend>qml6-module-qtqml-workerscript</depend>
  <depend>qml6-module-qt5compat-graphicaleffects</depend>
  <depend>qt6-5compat-dev</depend>
  <depend>qt6-base-dev</depend>
  <depend>qt6-base-private-dev</depend>
  <depend>qt6-declarative-dev</depend>
  <depend>qt6-declarative-private-dev</depend>
  <depend>tinyxml2</depend>

  <test_depend>xvfb</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
