load(
    "//ign_bazel:cmake_configure_file.bzl",
    "cmake_configure_file",
)
load(
    "//ign_bazel:qt.bzl",
    "qt_cc_binary",
)

BINARY_DIR = "/tmp"
SOURCE_DIR = "/tmp"
CMAKE_BINARY_DIR = "./ign_gui/test"
IGNITION_TOOLS_BINARY_DIRS = "/tmp"
PROJECT_NAME = "ignition-gui"
PROJECT_MAJOR = 4
PROJECT_MINOR = 0
PROJECT_PATCH = 0

# Generates config.hh based on the version numbers in CMake code.
cmake_configure_file(
    name = "test_config",
    src = "test_config.h.in",
    out = "test_config.h",
    cmakelists = ["CMakeLists.txt"],
    defines = [
        "PROJECT_BINARY_DIR=%s" % (BINARY_DIR),
        "PROJECT_SOURCE_DIR=%s" % (SOURCE_DIR),
        "CMAKE_BINARY_DIR=%s" % (CMAKE_BINARY_DIR),
        "IGNITION-TOOLS_BINARY_DIRS=%s" % (IGNITION_TOOLS_BINARY_DIRS),
        "PROJECT_VERSION_FULL=%d.%d.%d" % (PROJECT_MAJOR, PROJECT_MINOR, PROJECT_PATCH),  # noqa
    ],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "test_utils",
    srcs = ["test_config.h"],
    includes = ["."],
    visibility = ["//visibility:public"],
)

genrule(
    name = "TestPlugin_gen",
    srcs = [
        "plugins/TestPlugin.qrc",
        "plugins/TestPlugin.qml",
    ],
    outs = [
        "plugins/qrc_TestPlugin.rcc",
    ],
    cmd = "qtchooser -qt=5 -run-tool=rcc --name name -binary ign_gui/test/plugins/TestPlugin.qrc -o $(OUTS)",
)

qt_cc_binary(
    name = "libTestPlugin.so",
    srcs = ["plugins/TestPlugin.cc"],
    hdrs = ["plugins/TestPlugin.hh"],
    deps = [
        "//ign_common",
        "//ign_plugin/register",
        "//ign_gui",
    ],
    data = [
      "plugins/TestPlugin.qml",
      "plugins/qrc_TestPlugin.rcc"
    ],
    linkshared = True,
    linkopts = [],
    includes = ["."],
    visibility = ["//visibility:public"]
)
