load(
    "//ign_bazel:build_defs.bzl",
    "IGNITION_ROOT",
    "qt_cc_library",
    "qt_resource",
)

load(
    ":ign_gui_plugin.bzl",
    "ign_qt_plugin"
)

ign_qt_plugin(
    folder_name="foo",
    plugin_name="bar",
    qrc_file="grid_3d/Grid3D.qrc",
    qrc_resources=glob(["grid_3d/*.qml"]),
    srcs=["grid_3d/Grid3D.cc"],
    hdrs=["grid_3d/Grid3D.hh"],
    deps = [
        IGNITION_ROOT + "ign_common",
        IGNITION_ROOT + "ign_gui",
        IGNITION_ROOT + "ign_plugin/register",
        IGNITION_ROOT + "ign_rendering"
    ],
)
    


qt_resource(
    name="grid_3d_resources",
    qrc_file= "grid_3d/Grid3D.qrc",
    files=glob(["grid_3d/*.qml"]),
)

qt_cc_library(
    name="grid_3d",
    srcs=["grid_3d/Grid3D.cc"],
    hdrs=["grid_3d/Grid3D.hh"],
    deps = [
        IGNITION_ROOT + "ign_common",
        IGNITION_ROOT + "ign_gui",
        IGNITION_ROOT + "ign_plugin/register",
        IGNITION_ROOT + "ign_rendering"
    ],
)

cc_binary(
    name="libGrid3D.so",
    srcs=[":grid_3d"],
    linkshared=True,
)

cc_test(
    name="grid_3d_TEST",
    srcs=["grid_3d/Grid3D.cc"],
    data=[":libGrid3D.so"],
    deps=[
        ":grid_3d_resources",
        IGNITION_ROOT + "ign_common",
    ],
)

